--- a/.github/workflows/test_numpy.yml
+++ b/.github/workflows/test_numpy.yml
@@ -10,6 +10,7 @@ on:
       - unstable
   schedule:
     - cron: '0 23 * * 1'
+  workflow_dispatch:
 
 defaults:
   run:
@@ -61,6 +62,17 @@ jobs:
             generators: "Ninja",
             target: "all",
             numpy: "numpy",
+            python-version: "3.11"
+          }
+        - {
+            name: "Numpy v2",
+            os: ubuntu-latest,
+            build_type: "Release",
+            cc: "gcc-11",
+            cxx: "g++-11",
+            generators: "Ninja",
+            target: "all",
+            numpy: "numpy==2.0.0rc1",
             python-version: "3.11"
           }
 
